--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
   </head>
   <body>
     <div id="unity-container" class="unity-desktop">
-      <canvas id="unity-canvas" width=1080 height=1920></canvas>
+      <canvas id="unity-canvas" width=393 height=700></canvas>
       <div id="unity-loading-bar">
         <div id="unity-logo"></div>
         <div id="unity-progress-bar-empty">
@@ -56,11 +56,11 @@
       }
 
       var buildUrl = "Build";
-      var loaderUrl = buildUrl + "/CosmoMan.loader.js";
+      var loaderUrl = buildUrl + "/cosmo.loader.js";
       var config = {
-        dataUrl: buildUrl + "/CosmoMan.data",
-        frameworkUrl: buildUrl + "/CosmoMan.framework.js",
-        codeUrl: buildUrl + "/CosmoMan.wasm",
+        dataUrl: buildUrl + "/cosmo.data",
+        frameworkUrl: buildUrl + "/cosmo.framework.js",
+        codeUrl: buildUrl + "/cosmo.wasm",
         streamingAssetsUrl: "StreamingAssets",
         companyName: "DefaultCompany",
         productName: "Endless Runner",
@@ -95,8 +95,8 @@
       } else {
         // Desktop style: Render the game canvas in a window that can be maximized to fullscreen:
 
-        canvas.style.width = "1080px";
-        canvas.style.height = "1920px";
+        canvas.style.width = "393px";
+        canvas.style.height = "700px";
       }
 
       loadingBar.style.display = "block";
